--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bookpool",
   "version": "1.0.0",
   "description": "book sharing service",
-  "main": "truffle-config.js",
+  "main": "truffle.js",
   "directories": {
     "test": "test"
   },
@@ -17,6 +17,6 @@
   "author": "doubleu0714",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.3.0"
+    "lite-server": "^2.4.0"
   }
 }
